# crewAItripAdvisory

./: agents.py  document.txt  main.py  pyproject.toml  tasks.py
tools/: calculator_tools.py  search_tools.py
